# Jesse-s-AI-Agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.kiro/settings/: mcp.json
.kiro/specs/stdio-mcp-transport/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/strands-bedrock-agent/: .config.kiro  design.md  requirements.md  tasks.md
skills/aws-support-general-guidance/: SKILL.md
src/strands_bedrock_agent/: __init__.py  __main__.py  agent_factory.py  cli.py  config.py  errors.py  logging_setup.py  mcp_loader.py  system_prompt.py
src/strands_bedrock_agent/web/: __main__.py  schemas.py  server.py
src/strands_bedrock_agent/web/static/: app.css  app.js  index.html
tests/: conftest.py  test_config_property2.py  test_config_property3.py  test_config_unit.py  test_logging_property6.py  test_logging_property7.py  test_logging_property8.py  test_logging_property9.py  test_logging_unit.py  test_mcp_property5.py  test_mcp_unit.py  test_stdio_unit.py
tests/fixtures/: __init__.py  echo_mcp_server.py  stock_server.py
